set padding again (buttons are not visible correctly on pc)

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
@@ -28,6 +28,7 @@
     .case-responsive-button {
         height: 3rem; /* Set a fixed height for buttons on smaller screens */
         line-height: 1; /* Reduce space between lines on smaller screens */
+        padding: 4px;
     }
 }
 
@@ -35,5 +36,6 @@
     .thread-responsive-button {
         height: 3rem;
         line-height: 1;
+        padding: 4px;
     }
 }
